--- a/style.scss
+++ b/style.scss
@@ -263,51 +263,115 @@ p{
 
 /* Aca empieza la sección Contacto */
 
-.text-form{
-    text-align: left;
-    color: black;
-}
-
-.form-style {
-    display: flex;
-    justify-content: center;
-    color: black;
-    background-color: #ffffff;
-    border-radius: 5px;
-    font-weight: 600px;
-}
-
-.input-form{
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px;
-    border-radius: 5px;
-    color: black;
-    font-weight: 500;
-    background: rgba(0, 0, 0, 0.103);
-}
-
-textarea{
-    width: 100%;
-    color: black;
-    padding-left: 5px;
-    font-weight: 500;
-    background: rgba(0, 0, 0, 0.103);
-}
-
-.container-contacto {
-    background-color: white;
-    border: 1px solid gray;
-    border-radius: 5px;
+.social a {
     padding: 20px;
-    margin: 20px;
-    font-weight: 600;
+    color: #767c7c;
+    font-size: 1.1rem;
 }
-
-address {
-    font-style: normal;
-    font-weight: 600;
+#contact{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+}
+.social {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+}
+.social a{
+    padding: 20px;
+    color: #767c7c;
+    font-size: 1.1rem;
+}
+.social a:hover {
+    color: #332c45;
+    transition: all ease 0.3s;
+}
+.contact-box {
+    background-color: #332c45;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 30px;
+    box-shadow: 2px 0px 30px rgba(0,0,0,0.1);
+}
+.title h1 {
+    color: #e7eef3;
+    font-size: 2.5rem;
+    font-weight: lighter;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+.title p{
+    color: #cecece;
+    font-weight: lighter;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+.inputs {
+    margin: 15px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.inputs input {
+    width: 250px;
+    height: 45px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid rgba(251, 251, 251, 0.1);
+    outline: none;
+    margin: 10px 0px;
+    padding: 10px;
+    box-sizing: border-box;
+    color: #f4f4f4;
+    display: flex;
+}
+.inputs textarea {
+    width: 250px !important;
+    height: 250px !important;
+    outline: none;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(82, 82, 82, 1);
+    color: #fafafa;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.inputs button {
+    width: 200px;
+    height: 40px;
+    background-color: #ffffff;
+    border: none;
+    outline: none;
+    margin-top: 20px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+    letter-spacing: 1px;
+}
+.inputs input:focus {
+    border-bottom: 1px solid rgba(252 252 252 1);
+}
+.inputs textarea:focus {
+    border: none;
+    border-bottom: 1px solid rgba(255 255 255 1);
+}
+.inputs button:active {
+    transform: scale(1.02);
+}
+.map{
+    filter: grayscale(0.2);
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.2);
+    border: 2px solid #ffffff;
 }
 
 /* Acá empieza la sección Preguntas Frecuentes */
