--- a/style.scss
+++ b/style.scss
@@ -274,6 +274,7 @@ p{
     top: 50%;
     transform: translate(-50%, -50%);
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 .social {
@@ -290,17 +291,17 @@ p{
     font-size: 1.1rem;
 }
 .social a:hover {
-    color: #332c45;
+    color: #101A31;
     transition: all ease 0.3s;
 }
 .contact-box {
-    background-color: #332c45;
+    background-color: #101A31;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 30px 30px;
-    box-shadow: 2px 0px 30px rgba(0,0,0,0.1);
+    box-shadow: 5px 0px 30px rgba(24, 26, 56, 0.925);
 }
 .title h1 {
     color: #e7eef3;
@@ -359,18 +360,18 @@ p{
     letter-spacing: 1px;
 }
 .inputs input:focus {
-    border-bottom: 1px solid rgba(252 252 252 1);
+    border-bottom: 1px solid rgba(252, 252, 252, 1);
 }
 .inputs textarea:focus {
     border: none;
-    border-bottom: 1px solid rgba(255 255 255 1);
+    border-bottom: 1px solid rgba(255, 255, 255, 1);
 }
 .inputs button:active {
     transform: scale(1.02);
 }
 .map{
     filter: grayscale(0.2);
-    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.822);
     border: 2px solid #ffffff;
 }
 
@@ -479,21 +480,13 @@ h5{
 
 /* Media Query nav */
 
-@media (max-width: 320px) {
-    header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 2;
-    }
 
     .title-index {
         position: relative;
         z-index: 0;
         margin-top: 100px;
     }
-}
+
 
 @media (max-width: 768px) {
     .collapse{
@@ -506,6 +499,35 @@ h5{
     .nauticos{
         font-size: 1.5rem;
     }
+}
+
+/* Media Query seccion Contacto */
+
+@media (max-width: 1100px) {
+    .map {
+        display: none;
+    }
+}
+@media (max-width: 450px) {
+    .social {
+        display: none;
+    }
+    .contact-box{
+        width: 100%;
+        height: 100vh;
+        box-sizing: border-box;
+    }
+}
+#contact {
+    position: static;
+    transform: translate(0,0);
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+}
+.title h1 {
+    font-size: 2.2rem;
+    text-align: center;
 }
 
 /* Media Query seccion sobre nosotros */
@@ -540,6 +562,20 @@ h5{
         font-size: 16px;
     }
 }
+
+.navbar-toggler {
+    background-color: white;
+}
+
+@media (max-width: 320px) {
+    .header-nav {
+        background-color: white;
+    }
+    .navbar-toggler {
+        background-color: white; 
+    }
+}
+
 
 
 
