--- a/style.scss
+++ b/style.scss
@@ -564,15 +564,15 @@ h5{
 }
 
 .navbar-toggler {
-    background-color: white;
+    background-color: transparent;
 }
 
 @media (max-width: 320px) {
     .header-nav {
-        background-color: white;
+        background-color: transparent;
     }
     .navbar-toggler {
-        background-color: white; 
+        background-color: transparent; 
     }
 }
 
