--- a/css/style.css
+++ b/css/style.css
@@ -7505,5 +7505,12 @@ h5, .h5 {
     background-color: transparent;
   }
 }
+/* media querys para seccion trabajos */
+@media (max-width: 768px) {
+  .conteiner-trabajos {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
