--- a/style.scss
+++ b/style.scss
@@ -580,6 +580,14 @@ h5{
     }
 }
 
+/* media querys para seccion trabajos */
+@media (max-width: 768px) {
+    .conteiner-trabajos {
+        flex-direction: column; 
+        align-items: center; 
+    }
+}
+
 
 
 
