--- a/css/style.css
+++ b/css/style.css
@@ -7510,6 +7510,10 @@ h5, .h5 {
   .conteiner-trabajos {
     flex-direction: column;
     align-items: center;
+    text-align: center;
+  }
+  .image-costura {
+    margin: 0 auto;
   }
 }
 
