--- a/style.scss
+++ b/style.scss
@@ -585,6 +585,11 @@ h5{
     .conteiner-trabajos {
         flex-direction: column; 
         align-items: center; 
+        text-align: center; 
+    }
+
+    .image-costura {
+        margin: 0 auto; 
     }
 }
 
