--- a/style.scss
+++ b/style.scss
@@ -566,32 +566,66 @@ h5{
         font-size: 16px;
     }
 }
-
 .navbar-toggler {
     background-color: transparent;
 }
-
 @media (max-width: 320px) {
     .header-nav {
         background-color: transparent;
     }
+    
     .navbar-toggler {
         background-color: transparent; 
     }
 }
 
 /* media querys para seccion trabajos */
+
+@media (max-width: 1024px) {
+    .conteiner-trabajos {
+        flex-direction: column; 
+        align-items: center; 
+        text-align: center; 
+    }
+    .image-costura {
+        margin: 0 auto; 
+    }
+}
+
 @media (max-width: 768px) {
     .conteiner-trabajos {
         flex-direction: column; 
         align-items: center; 
         text-align: center; 
     }
-
     .image-costura {
         margin: 0 auto; 
+        max-width: 100%; 
     }
 }
+
+@media (max-width: 425px) {
+    .conteiner-trabajos {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .image-costura {
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 375px) {
+    .conteiner-trabajos {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .image-costura {
+        margin: 0 auto;
+    }
+}
+
 
 
 
