--- a/style.scss
+++ b/style.scss
@@ -573,7 +573,7 @@ h5{
     .header-nav {
         background-color: transparent;
     }
-    
+
     .navbar-toggler {
         background-color: transparent; 
     }
@@ -626,6 +626,7 @@ h5{
     }
 }
 
+/* finalizan las media querys */
 
 
 
