--- a/css/style.css
+++ b/css/style.css
@@ -6957,7 +6957,8 @@ body {
   overflow-y: auto;
 }
 
-html, body {
+html,
+body {
   height: 92.49%;
 }
 
@@ -6966,7 +6967,7 @@ html, body {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-image: url(../img/images-index/image-yate-costado.png);
+  background-image: url(../img/images-index/lapiz7.png);
   background-size: cover;
   background-position: center;
   backdrop-filter: blur(4px);
@@ -6982,6 +6983,7 @@ html, body {
 
 .nauticos {
   font-size: 2rem;
+  font-weight: 700;
 }
 
 .title-index {
@@ -7092,14 +7094,12 @@ h2, .h2 {
   text-align: center;
   margin: 20px auto;
 }
-
 .heading h1, .heading .h1 {
   font-size: 50px;
   color: #000;
   margin-bottom: 25px;
   position: relative;
 }
-
 .heading h1::after, .heading .h1::after {
   content: "";
   position: absolute;
@@ -7109,7 +7109,6 @@ h2, .h2 {
   margin: 0 auto;
   background-color: #101A31;
 }
-
 .heading p {
   font-size: 18px;
   color: #666;
@@ -7135,7 +7134,6 @@ h2, .h2 {
   overflow: hidden;
   border: 1px solid black;
 }
-
 .about-image img {
   max-width: 100%;
   height: auto;
@@ -7150,13 +7148,11 @@ h2, .h2 {
 .about-content {
   flex: 1;
 }
-
 .about-content p {
   font-size: 18px;
   line-height: 1.5;
   color: #666;
 }
-
 .about-content .read-more {
   display: inline-block;
   padding: 10px 20px;
@@ -7168,8 +7164,7 @@ h2, .h2 {
   margin-top: 15px;
   transition: 0.3s ease;
 }
-
-.about-content .read-more:hover {
+.about-content .read-more :hover {
   background-color: #101A31;
 }
 
