--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,45 +1,46 @@
-@import "../aplicandosass/node_modules/bootstrap/scss/functions";
-@import "../aplicandosass/node_modules/bootstrap/scss/variables";
-@import "../aplicandosass/node_modules/bootstrap/scss/variables-dark";
-@import "../aplicandosass/node_modules/bootstrap/scss/maps";
-@import "../aplicandosass/node_modules/bootstrap/scss/mixins";
-@import "../aplicandosass/node_modules/bootstrap/scss/root";
-@import "../aplicandosass/node_modules/bootstrap/scss/utilities";
-@import "../aplicandosass/node_modules/bootstrap/scss/reboot";
-@import "../aplicandosass/node_modules/bootstrap/scss/type";
-@import "../aplicandosass/node_modules/bootstrap/scss/images";
-@import "../aplicandosass/node_modules/bootstrap/scss/containers";
-@import "../aplicandosass/node_modules/bootstrap/scss/grid";
-@import "../aplicandosass/node_modules/bootstrap/scss/helpers";
-@import "../aplicandosass/node_modules/bootstrap/scss/utilities/api";
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/variables-dark";
+@import "../node_modules/bootstrap/scss/maps";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/root";
+@import "../node_modules/bootstrap/scss/utilities";
+@import "../node_modules/bootstrap/scss/reboot";
+@import "../node_modules/bootstrap/scss/type";
+@import "../node_modules/bootstrap/scss/images";
+@import "../node_modules/bootstrap/scss/containers";
+@import "../node_modules/bootstrap/scss/grid";
+@import "../node_modules/bootstrap/scss/helpers";
+@import "../node_modules/bootstrap/scss/utilities/api";
 
-@mixin flex-wrap-center{
+@mixin flex-wrap-center {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-*{
+* {
     margin: 0px;
     padding: 0px;
     font-family: 'Poppins', sans-serif;
 }
 
-body{
+body {
     overflow-y: auto;
 }
 
-html, body{
+html,
+body {
     height: 92.49%;
 }
 
 /* Body index-gral */
 
-.image-fondo{
+.image-fondo {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-image: url(../img/images-index/image-yate-costado.png);
+    background-image: url(../img/images-index/lapiz7.png);
     background-size: cover;
     background-position: center;
     backdrop-filter: blur(4px);
@@ -53,22 +54,23 @@ html, body{
     font-weight: 600;
 }
 
-.nauticos{
+.nauticos {
     font-size: 2rem;
+    font-weight: 700;
 }
 
-.title-index{
+.title-index {
     color: #101A31;
     text-align: center;
     margin-top: 150px;
     font-weight: 600;
 }
 
-.prueba2{
+.prueba2 {
     height: 100%;
 }
 
-ul{
+ul {
     list-style: none;
     display: flex;
     gap: 25px;
@@ -76,34 +78,34 @@ ul{
     margin-right: 25px;
 }
 
-.navigation-bar{
+.navigation-bar {
     display: flex;
     font-weight: 600;
     list-style: none;
     font-size: 1.031rem;
 }
 
-.nav-index{
+.nav-index {
     color: #101A31;
     text-decoration: none;
     font-weight: 600;
 }
 
-h3{
+h3 {
     font-size: 40px;
     text-align: center;
     font-weight: 600;
     padding-top: 130px;
 }
 
-.text-index{
+.text-index {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.text-rudder{
+.text-rudder {
     text-align: center;
     font-weight: 600;
     font-size: 18px;
@@ -113,7 +115,7 @@ h3{
 
 /* footer */
 
-.footer-index{
+.footer-index {
     padding: 25px;
     display: flex;
     justify-content: space-around;
@@ -125,23 +127,23 @@ h3{
     background: transparent;
 }
 
-.p-footer{
+.p-footer {
     font-size: 0.813rem;
     text-align: center;
     font-weight: 600;
     color: #fff;
 }
 
-footer a img{
+footer a img {
     width: 40px;
 }
 
-.icon-instagram{
+.icon-instagram {
     display: flex;
     justify-content: flex-end;
 }
 
-.other-hello{
+.other-hello {
     font-size: 0.813rem;
     display: flex;
     justify-content: center;
@@ -151,7 +153,7 @@ footer a img{
 
 /* Acá empieza la sección Nosotros */
 
-h2{
+h2 {
     font-size: 40px;
     text-align: center;
     margin-top: 30px;
@@ -159,7 +161,7 @@ h2{
     color: #101A31;
 }
 
-.heading{
+.heading {
     width: 90%;
     display: flex;
     justify-content: center;
@@ -167,101 +169,91 @@ h2{
     flex-direction: column;
     text-align: center;
     margin: 20px auto;
+    h1 {
+            font-size: 50px;
+            color: #000;
+            margin-bottom: 25px;
+            position: relative;
+        }
+        h1::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 4px;
+            display: block;
+            margin: 0 auto;
+            background-color: #101A31;}
+    p {
+        font-size: 18px;
+        color: #666;
+        margin-bottom: 35px;
+    }
 }
 
-.heading h1{
-    font-size: 50px;
-    color: #000;
-    margin-bottom: 25px;
-    position: relative;
-}
-
-.heading h1::after{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    display: block;
-    margin: 0 auto;
-    background-color: #101A31;
-}
-
-.heading p{
-    font-size: 18px;
-    color: #666;
-    margin-bottom: 35px;
-}
-
-.container{
+.container {
     width: 90%;
     margin: 0 auto;
     padding: 10px 20px;
 }
 
-.about{
+.about {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
 
-.about-image{
+.about-image {
     flex: 1;
     margin-right: 40px;
     overflow: hidden;
     border: 1px solid black;
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        transition: 0.5s ease;}
 }
 
-.about-image img{
-    max-width: 100%;
-    height: auto;
-    display: block;
-    transition: 0.5s ease;
-}
-
-.about-image:hover img{
+.about-image:hover img {
     transform: scale(1.2);
 }
 
-.about-content{
-    flex:1;
+.about-content {
+    flex: 1;
+    p {
+        font-size: 18px;
+        line-height: 1.5;
+        color: #666;
+    }
+    .read-more {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #101A31;
+        color: #fff;
+        font-size: 19px;
+        text-decoration: none;
+        border-radius: 25px;
+        margin-top: 15px;
+        transition: 0.3s ease;
+        :hover {
+            background-color: #101A31;
+        }
+    }
 }
 
-.about-content p{
-    font-size: 18px;
-    line-height: 1.5;
-    color: #666;
-}
-
-.about-content .read-more{
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #101A31;
-    color: #fff;
-    font-size: 19px;
-    text-decoration: none;
-    border-radius: 25px;
-    margin-top: 15px;
-    transition: 0.3s ease;
-}
-
-.about-content .read-more:hover{
-    background-color: #101A31;
-}
-
-p{
+p {
     font-weight: 500;
 }
 
-
 /* Acá empieza la sección trabajos */
 
-.conteiner-trabajos{
+.conteiner-trabajos {
     @include flex-wrap-center;
 }
 
-.image-costura{
-    width:420px;
+.image-costura {
+    width: 420px;
     padding: 25px;
 }
 
@@ -272,7 +264,8 @@ p{
     color: #767c7c;
     font-size: 1.1rem;
 }
-#contact{
+
+#contact {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -281,23 +274,27 @@ p{
     justify-content: center;
     align-items: center;
 }
+
 .social {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
 }
-.social a{
+
+.social a {
     padding: 20px;
     color: #767c7c;
     font-size: 1.1rem;
 }
+
 .social a:hover {
     color: #101A31;
     transition: all ease 0.3s;
 }
+
 .contact-box {
     background-color: #101A31;
     display: flex;
@@ -307,6 +304,7 @@ p{
     padding: 30px 30px;
     box-shadow: 5px 0px 30px rgba(24, 26, 56, 0.925);
 }
+
 .title h1 {
     color: #e7eef3;
     font-size: 2.5rem;
@@ -315,13 +313,15 @@ p{
     padding: 0;
     text-align: center;
 }
-.title p{
+
+.title p {
     color: #cecece;
     font-weight: lighter;
     margin: 0;
     padding: 0;
     text-align: center;
 }
+
 .inputs {
     margin: 15px 0px;
     display: flex;
@@ -329,6 +329,7 @@ p{
     justify-content: center;
     align-items: center;
 }
+
 .inputs input {
     width: 250px;
     height: 45px;
@@ -342,6 +343,7 @@ p{
     color: #f4f4f4;
     display: flex;
 }
+
 .inputs textarea {
     width: 250px !important;
     height: 250px !important;
@@ -352,6 +354,7 @@ p{
     padding: 10px;
     box-sizing: border-box;
 }
+
 .inputs button {
     width: 200px;
     height: 40px;
@@ -363,17 +366,21 @@ p{
     box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
     letter-spacing: 1px;
 }
+
 .inputs input:focus {
     border-bottom: 1px solid rgba(252, 252, 252, 1);
 }
+
 .inputs textarea:focus {
     border: none;
     border-bottom: 1px solid rgba(255, 255, 255, 1);
 }
+
 .inputs button:active {
     transform: scale(1.02);
 }
-.map{
+
+.map {
     filter: grayscale(0.2);
     box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.822);
     border: 2px solid #ffffff;
@@ -381,21 +388,21 @@ p{
 
 /* Acá empieza la sección Preguntas Frecuentes */
 
-.title-preg{
+.title-preg {
     font-size: 1.7rem;
     margin-top: 100px;
 }
 
-.body-question{
+.body-question {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background: #fff;
-    padding-bottom: 50px; 
+    padding-bottom: 50px;
 }
 
-.container-question{
+.container-question {
     margin: 0 40px;
     max-width: 600px;
     display: flex;
@@ -403,15 +410,15 @@ p{
     gap: 20px;
 }
 
-.h4{
+.h4 {
     color: #333;
 }
 
-h5{
+h5 {
     font-size: 1rem;
 }
 
-.container-question .tab{
+.container-question .tab {
     background: #fff;
     padding: 20px 20px;
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.411);
@@ -419,21 +426,21 @@ h5{
     overflow: hidden;
 }
 
-.container-question h2{
-    color:#101A31;
+.container-question h2 {
+    color: #101A31;
 }
 
-.container-question .tab input{
+.container-question .tab input {
     appearance: none;
 }
 
-.container-question .tab label{
+.container-question .tab label {
     display: flex;
     align-items: center;
     cursor: pointer;
 }
 
-.container-question .tab label h4{
+.container-question .tab label h4 {
     width: 40px;
     height: 40px;
     background: #101A31;
@@ -446,7 +453,7 @@ h5{
     margin-right: 10px;
 }
 
-.container-question h5{
+.container-question h5 {
     font-weight: 600;
 }
 
@@ -462,7 +469,7 @@ h5{
 
 /* Finaliza */
 
-.li-header{
+.li-header {
     display: flex;
     text-decoration: none;
     list-style: none;
@@ -470,14 +477,14 @@ h5{
     font-size: 1.031rem;
 }
 
-.titulo{
+.titulo {
     color: #fff;
 }
 
 /* Media Query titleindex */
 
-@media (max-width: 360px){
-    .text-rudder{
+@media (max-width: 360px) {
+    .text-rudder {
         padding: 10px;
     }
 }
@@ -485,22 +492,22 @@ h5{
 /* Media Query nav */
 
 
-    .title-index {
-        position: relative;
-        z-index: 0;
-        margin-top: 100px;
-    }
+.title-index {
+    position: relative;
+    z-index: 0;
+    margin-top: 100px;
+}
 
 
 @media (max-width: 768px) {
-    .collapse{
+    .collapse {
         display: flex;
         justify-content: start;
     }
 }
 
 @media (max-width: 320px) {
-    .nauticos{
+    .nauticos {
         font-size: 1.5rem;
     }
 }
@@ -512,23 +519,27 @@ h5{
         display: none;
     }
 }
+
 @media (max-width: 450px) {
     .social {
         display: none;
     }
-    .contact-box{
+
+    .contact-box {
         width: 100%;
         height: 100vh;
         box-sizing: border-box;
     }
 }
+
 #contact {
     position: static;
-    transform: translate(0,0);
+    transform: translate(0, 0);
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
 }
+
 .title h1 {
     font-size: 2.2rem;
     text-align: center;
@@ -536,46 +547,55 @@ h5{
 
 /* Media Query seccion sobre nosotros */
 
-@media screen and (max-width: 768px){
-    .heading{
-        padding:0px 20px;
+@media screen and (max-width: 768px) {
+    .heading {
+        padding: 0px 20px;
     }
-    .heading h1{
+
+    .heading h1 {
         font-size: 36px;
     }
-    .heading p{
+
+    .heading p {
         font-size: 17px;
         margin-bottom: 0px;
     }
-    .container{
+
+    .container {
         padding: 20px;
         flex-direction: column;
     }
-    .about{
+
+    .about {
         flex-direction: column;
     }
-    .about-image{
+
+    .about-image {
         margin-right: 0px;
         margin-bottom: 20px;
     }
-    .about-content p{
+
+    .about-content p {
         padding: 0px;
         font-size: 16px;
     }
-    .about-content .read-more{
+
+    .about-content .read-more {
         font-size: 16px;
     }
 }
+
 .navbar-toggler {
     background-color: transparent;
 }
+
 @media (max-width: 320px) {
     .header-nav {
         background-color: transparent;
     }
 
     .navbar-toggler {
-        background-color: transparent; 
+        background-color: transparent;
     }
 }
 
@@ -583,24 +603,26 @@ h5{
 
 @media (max-width: 1024px) {
     .conteiner-trabajos {
-        flex-direction: column; 
-        align-items: center; 
-        text-align: center; 
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
+
     .image-costura {
-        margin: 0 auto; 
+        margin: 0 auto;
     }
 }
 
 @media (max-width: 768px) {
     .conteiner-trabajos {
-        flex-direction: column; 
-        align-items: center; 
-        text-align: center; 
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
+
     .image-costura {
-        margin: 0 auto; 
-        max-width: 100%; 
+        margin: 0 auto;
+        max-width: 100%;
     }
 }
 
@@ -610,6 +632,7 @@ h5{
         align-items: center;
         text-align: center;
     }
+
     .image-costura {
         margin: 0 auto;
     }
@@ -621,15 +644,10 @@ h5{
         align-items: center;
         text-align: center;
     }
+
     .image-costura {
         margin: 0 auto;
     }
 }
 
 /* finalizan las media querys */
-
-
-
-
-
-
